OSDOP-381: Refactored field API integration to ensure controllers are responsible for controller logic and the query service is the single source of interaction with EPA (#369)